Minor frontend improvements.

--- a/src/main/resources/templates/instructors/list.html
+++ b/src/main/resources/templates/instructors/list.html
@@ -6,6 +6,7 @@
     <style>
         table, th, td {
             border: 2px solid black;
+            height: 25px;
             border-collapse: collapse;
         }
     </style>
