--- a/src/main/resources/templates/instructors/show.html
+++ b/src/main/resources/templates/instructors/show.html
@@ -7,6 +7,7 @@
     <style>
         table, th, td {
             border: 2px solid black;
+            height: 25px;
             border-collapse: collapse;
         }
     </style>
@@ -16,13 +17,14 @@
 
 <!--/*@thymesVar id="instructor" type="com.example.swimmingproject.model.Instructor"*/-->
 
-<h1 th:text="${instructor.firstName} + ' ' + ${instructor.lastName}">George Kowalski</h1>
-<h3>
-    <a href="#" th:href="@{'/instructor/' + ${instructor.id} + '/update'}">Update</a>
-    <a style="color:red" href="#" th:href="@{'/instructor/' + ${instructor.id} + '/delete'}">Delete</a>
-</h3>
+<h1 th:text="'Instructor - ' + ${instructor.firstName} + ' ' + ${instructor.lastName}">Instructor - George Kowalski
+    <a style="color:blue; font-size:medium" href="#"
+       th:href="@{'/instructor/' + ${instructor.id} + '/update'}">Update</a>
+    <a style="color:red; font-size:medium" href="#"
+       th:href="@{'/instructor/' + ${instructor.id} + '/delete'}">Delete</a>
+</h1>
 
-<table style="width:50%;  text-align:center">
+<table style="width:75%;  text-align:center">
 
     <caption style="font-size:30px; font-weight: bold; text-align:left">Lessons</caption>
 
@@ -36,11 +38,17 @@
 
     <tbody>
     <!--/*@thymesVar id="lesson" type="com.example.swimmingproject.model.Lesson"*/-->
+
+
     <tr th:each="lesson : ${instructor.lessons}">
-        <td th:text="${lesson.id}">1</td>
+        <td>
+            <a th:text="${lesson.id}" href="#" th:href="@{'/lessons/' + ${lesson.id}}">1</a>
+        </td>
         <td th:text="${lesson.localDateTime}">Date</td>
         <td th:text="${lesson.description}">Description</td>
-        <td><a href="#" th:href="@{'/lessons/' + ${lesson.id}}">View</a></td>
+        <td th:each="swimmer : ${lesson.swimmers}" >
+            <a th:text="${swimmer.firstName + ' ' + swimmer.lastName}" href="#" th:href="@{'/swimmers/' + ${swimmer.id}}">Swimmer</a>
+        </td>
     </tr>
     </tbody>
 </table>
