--- a/src/main/resources/templates/lessons/show.html
+++ b/src/main/resources/templates/lessons/show.html
@@ -7,6 +7,7 @@
     <style>
         table, th, td {
             border: 2px solid black;
+            height: 25px;
             border-collapse: collapse;
         }
     </style>
@@ -49,7 +50,7 @@
     <tbody>
     <tr th:each="swimmer : ${lesson.swimmers}">
         <td>
-            <a th:text="${swimmer.firstName} + ' ' + ${swimmer.lastName}" th:href="@{'/swimmers/' + ${swimmer.id} + '/show'}">John Kowalski</a>
+            <a th:text="${swimmer.firstName} + ' ' + ${swimmer.lastName}" th:href="@{'/swimmers/' + ${swimmer.id}}">John Kowalski</a>
         </td>
     </tr>
     </tbody>
