--- a/src/main/resources/templates/swimmers/show.html
+++ b/src/main/resources/templates/swimmers/show.html
@@ -7,6 +7,7 @@
     <style>
         table, th, td {
             border: 2px solid black;
+            height: 25px;
             border-collapse: collapse;
         }
     </style>
@@ -38,7 +39,7 @@
     <tbody>
     <tr th:each="lesson : ${swimmer.lessons}">
         <td th:text="${lesson.id}">1</td>
-        <td th:text="${lesson.instructor}">Instructor</td>
+        <td th:text="${lesson.instructor.firstName + ' ' + lesson.instructor.lastName}">Instructor</td>
         <td th:text="${lesson.description}">Description</td>
         <td th:text="${lesson.localDateTime}">Date</td>
     </tr>
