Initial commit after project recovery.

--- a/src/main/resources/templates/instructors/list.html
+++ b/src/main/resources/templates/instructors/list.html
@@ -24,7 +24,7 @@
     </tr>
     </thead>
     <tr th:each="instructor : ${instructors}">
-        <!--/*@thymesVar id="instructor" type="com.example.swimmingproject.model.Instructor"*/-->
+        <!--/*@thymesVar id="instructor" type="com.example.sgswimming.model.Instructor"*/-->
         <td th:text="${instructor.id}">3</td>
         <td th:text="${instructor.firstName}">George</td>
         <td th:text="${instructor.lastName}">Kowalski</td>
