--- a/src/main/resources/templates/swimmers/show.html
+++ b/src/main/resources/templates/swimmers/show.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<!--/*@thymesVar id="swimmer" type="com.example.swimmingproject.model.Swimmer"*/-->
+<!--/*@thymesVar id="swimmer" type="com.example.sgswimming.model.Swimmer"*/-->
 
 <h1 th:text="${swimmer.firstName} + ' ' + ${swimmer.lastName}">George Kowalski</h1>
 <h3>
