Fixed a bug -> Displaying "/instructors/show" when instructor.lessons was empty threw an error.

--- a/src/main/resources/templates/instructors/show.html
+++ b/src/main/resources/templates/instructors/show.html
@@ -32,7 +32,7 @@
     <tr>
         <th>ID</th>
         <th>Date</th>
-        <th th:colspan="${instructor.lessons.get(0).swimmers.size()}">Participants</th>
+        <th th:unless="${#lists.isEmpty(instructor.getLessons())}" th:colspan="${instructor.lessons.get(0).swimmers.size()}">Participants</th>
     </tr>
     </thead>
 
