--- a/src/main/resources/templates/lessons/list.html
+++ b/src/main/resources/templates/lessons/list.html
@@ -24,7 +24,7 @@
     </tr>
     </thead>
     <tr th:each="lesson : ${lessons}">
-        <!--/*@thymesVar id="lesson" type="com.example.sgswimming.model.Lesson"*/-->
+        <!--/*@thymesVar id="lesson" type="com.example.sgswimming.DTOs.LessonDTO"*/-->
         <td th:text="${lesson.id}">3</td>
         <td th:text="${#temporals.format(lesson.localDateTime,'dd-MM-yyyy')}">01.01.01</td>
         <td th:text="${lesson.description}">Desc</td>
