--- a/src/main/resources/templates/lessons/show.html
+++ b/src/main/resources/templates/lessons/show.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<!--/*@thymesVar id="lesson" type="com.example.sgswimming.model.Lesson"*/-->
+<!--/*@thymesVar id="lesson" type="com.example.sgswimming.DTOs.LessonDTO"*/-->
 
 <h1>Lesson details</h1>
 
