--- a/src/main/resources/templates/instructors/list.html
+++ b/src/main/resources/templates/instructors/list.html
@@ -25,7 +25,7 @@
     </thead>
 
     <tr th:each="instructor : ${instructors}">
-        <!--/*@thymesVar id="instructor" type="com.example.sgswimming.model.Instructor"*/-->
+        <!--/*@thymesVar id="instructor" type="com.example.sgswimming.DTOs.InstructorDTO"*/-->
         <td th:text="${instructor.id}">3</td>
         <td th:text="${instructor.firstName}">George</td>
         <td th:text="${instructor.lastName}">Kowalski</td>
